05 - Storage/sonarqube/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sonarqube
spec:
  port:
    targetPort: sonarqube
  tls:
    termination: edge
  to:
    kind: Service
    name: sonarqube
